feat: add location feature, add auth for category & profile
