# src/routes/v1/category.route.ts
@@ -1,12 +1,16 @@
 import express from 'express';
 import * as categories from '../../controllers/categories.controller';
-
+import { authentication } from '../../middlewares/authmiddleware';
 const categoryRoute = express.Router();
 
-categoryRoute.get('/', categories.getAllCategories);
-categoryRoute.get('/:id', categories.getCategoryById);
-categoryRoute.post('/create/:productId', categories.createCategories);
-categoryRoute.put('/:id', categories.updateCategories);
-categoryRoute.delete('/:id', categories.deleteCategory);
+categoryRoute.get('/', authentication, categories.getAllCategories);
+categoryRoute.get('/:id', authentication, categories.getCategoryById);
+categoryRoute.post(
+  '/create/:productId',
+  authentication,
+  categories.createCategories,
+);
+categoryRoute.put('/:id', authentication, categories.updateCategories);
+categoryRoute.delete('/:id', authentication, categories.deleteCategory);
 
 export default categoryRoute;
