# src/routes/v1/index.route.ts
@@ -3,6 +3,7 @@ import authRoute from './auth.route';
 import roleRoute from './role.route';
 import profileRoute from './profile.route';
 import app_message from './message.route';
+import locationRoute from './locations.route';
 import app_store from './store.route';
 import { authentication } from '../../middlewares/authmiddleware';
 import app_product from './product.route';
@@ -23,5 +24,5 @@ router.use('/product', app_product);
 router.use('/category', categoryRoute);
 router.use('/carts', cartsRoute);
 router.use('/cart-items', cartsitemsRoute);
-
+router.use('/locations', locationRoute);
 export default router;
